gitops/manifests/influxdb/install.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: influxdb
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: influxdb
  name: influxdb
  namespace: influxdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influxdb
  serviceName: influxdb
  template:
    metadata:
      labels:
        app: influxdb
        app.kubernetes.io/name: influxdb
    spec:
      containers:
        - image: influxdb:2.9.0
          name: influxdb
          ports:
            - containerPort: 8086
              name: influxdb
          volumeMounts:
            - mountPath: /var/lib/influxdb2
              name: data
  volumeClaimTemplates:
    - metadata:
        name: data
        namespace: influxdb
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: nfs-csi-synologynas
        volumeName: pvc-acbe1d1b-cfc2-48f6-8688-af5fff81382b
        resources:
          requests:
            storage: 32G
---
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  namespace: influxdb
spec:
  ports:
    - name: influxdb
      port: 8086
      targetPort: 8086
  selector:
    app: influxdb
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: influxdb-ingress
  namespace: influxdb
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`influxdb.local.timmybtech.com`) # create A record in pihole
      kind: Rule
      services:
        - name: influxdb
          port: 8086
  tls:
    secretName: local-timmybtech-com-tls # or local-timmybtech-com-staging-tls
